# idroid_demo

./: Cargo.toml  README.MD  build.rs  rustfmt.toml
examples/compute/: main.rs
examples/demo/: main.rs
iOS/brush/: MetalController.swift  idroid.h  rs_glue.h
iOS/brush.xcodeproj/: project.pbxproj
iOS/brush.xcodeproj/project.xcworkspace/xcuserdata/grenlight.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/brush/Base.lproj/: Main.storyboard
shader/: page_turning.fs  roll.fs  roll.vs
shader/brush/: bristle.fs
shader/fluid/: collide.comp  propagate.comp
src/: depth_stencil.rs  lib.rs  matrix_helper.rs  shader.rs  spirv.txt  texture.rs  triangle.rs
src/fluid/: lbm_flow.rs  mod.rs  test
src/geometry/: plane.rs
src/math/: mod.rs  position.rs
src/node/: none_node.rs  point_node.rs
src/procedure_texture/: brick.rs
src/utils/: gaussian.rs  mod.rs
uni-view/: Cargo.toml
uni-view/src/: ios_view.rs  lib.rs  mac_fs.rs  mac_view.rs
