[package]
name = "idroid"
version = "0.1.0"
authors = ["li jinlei <grenlight@icloud.com>"]
edition = "2018"

[lib]
name = "idroid"
# [target.'cfg(target_os = "ios")'.lib]
crate-type = ["staticlib"]
# [target.'cfg(target_os = "macos")'.lib]
# crate-type = ["rlib"]
# [target.'cfg(target_os = "android")'.lib]
# crate-type = ["cdylib"]

[features]
default = []
dx11 = ["wgpu/dx11"]
dx12 = ["wgpu/dx12"]
metal = ["wgpu/metal"]
vulkan = ["wgpu/vulkan"]

[dependencies]
libc = "*"

# wgpu = { git = "https://github.com/gfx-rs/wgpu", version = "0.2.3"}
# wgpu-rs  is an idiomatic Rust wrapper over wgpu-native. 
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", branch = "master"}
# wgpu = { path = "wgpu-rs" }
uni-view = { path="uni-view" }


# 矢量 & 矩阵库 https://github.com/brendanzab/cgmath
# 20190117 500+ star
# cgmath = "*"

# http://nalgebra.org/quick_reference/
# # 20190117 900+ star
# nalgebra   = "*"

# The nalgebra-glm crate is a GLM-like interface for the nalgebra general-purpose linear algebra library.
# GLM itself is a popular C++ linear algebra library essentially targeting computer graphics.
# Therefore nalgebra-glm draws inspiration from GLM to define a nice and easy-to-use API for simple graphics application.
# All the types of nalgebra-glm are actually aliases of types from nalgebra.
nalgebra-glm = "*"

# 图片操作库(生于 piston 项目) https://github.com/PistonDevelopers/image
# image = "*"
image = "0.20.1"

env_logger = "0.5"
log = "0.4"
failure = "0.1"
lazy_static = "*"


[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.18"
glsl-to-spirv = "*"

# glsl-to-spirv 不支持编译到 iOS 设备
[build-dependencies]
glsl-to-spirv = "*"


[dev-dependencies]
env_logger = "0.5"
lazy_static = "*"
palette = "0.4"
rand = "0.6"

[target.'cfg(target_os = "macos")'.dev-dependencies]
winit = "0.18"
objc = "*"